--- a/Gallery.html
+++ b/Gallery.html
@@ -52,7 +52,7 @@
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="http://www.racefun.me" style="padding: 10px 46px;">Home</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://www.racefun.me" style="padding: 10px 46px;">Home</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Gallery.html" style="padding: 10px 46px;">Memories</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="History.html" style="padding: 10px 46px;">History</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Links.html" style="padding: 10px 46px;">Links</a>
